# kgas

./: .coveragerc  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  ADVERSARIAL_TEST_RESULTS.md  ARCHITECTURAL_BOTTLENECKS_ANALYSIS.md  ARCHITECTURAL_STABILITY_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_PLAN.md  CAPABILITY_REGISTRY_NUMBERED.md  CLAUDE.md  CLAUDE_ACTUALLY_FINAL.md  CLAUDE_CURRENT.md  CLAUDE_FINAL.md  CLAUDE_MVP_DAY1.md  CLAUDE_OLD.md  CLAUDE_OPTIMIZED.md  CLAUDE_PHASE21_COMPLETION.md  CLAUDE_TRULY_FINAL.md  CLAUDE_backup_20250828.md  CLAUDE_deferred.md  COMPLETE_EVIDENCE_TRACE.md  COMPREHENSIVE_DOCUMENTATION_REVIEW.md  CONSOLIDATED_REVIEW_ANALYSIS.md  COVERAGE_PROGRESS_REPORT.md  COVERAGE_REPORT.md  Contract_First_Action_Plan.md  Contract_First_Revised_Plan.md  Contract_First_Uncertainty_Analysis.md  DIGIMON_IDEAS.md  DOCUMENTATION_CONSISTENCY_ANALYSIS.md  DOCUMENTATION_IMPROVEMENT_INDEX.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DOCUMENTATION_REVIEW_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXAMINATION_SUMMARY.md  EXTERNAL_REVIEW_RESPONSE.md  (+838 more)
.gemini-cache/: 1c59c4c17211c511c66c8dfad0abb1ceeead3ded33c7fac0bdf2f8ac47aa0239_1adc513fbca067b0d5bf4a7c296eac3f5dc11d325a2f1f3ce52ce153277fb7ee_repomix.cache  1e2d8ba1c28e71bfe9aa3db2e802a9628f9b3fcd36954d76a6c836e907b24340_fb6c33852250dc99eafe2d7ec01872e45b787fbf7239cfca14ea28c434dc0f91_analysis.cache  (+10 more)
config/: CLAUDE.md  README.md  base.yaml  config.yaml  config_loader.py  credential.salt  default.yaml  development.yaml  production.yaml  pyproject.toml  services.yaml  testing.yaml
config/environments/: CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
config/examples/: docs-review.yaml  verification-review.yaml
config/legacy_tools/examples/: climate_report.txt  minimal_working_example.py  verify_package_installation.py
config/legacy_tools/scripts/: audit_tools.py  check_doc_drift.py  comprehensive_validation.py  concatenate_evergreen.py  ensure_neo4j.py  quick_status_check.sh  run_all_tests.sh  simple_fastmcp_server.py  test_ui.py  verify_system.py
config/legacy_tools/scripts/demo/: debug_ui_error.py  find_climate_orgs.py  show_graph_summary.py  show_orgs_with_locations.py
config/legacy_tools/scripts/verification/: PHASE2_EVIDENCE_QUICK_VERIFICATION.py
config/monitoring/: CLAUDE.md  docker-compose.monitoring.yml  integration_monitoring.json  prometheus.yml
config/orchestration/: default_config.json  parallel_workflows.yaml
config/schemas/: THEORY_META_SCHEMA_V11_CHANGES.md  agenda_setting_theory_schema.json  balance_theory_heider_schema.json  cognitive_dissonance_theory_schema.json  framing_theory_schema.json  institutional_theory_schema.json  network_theory_schema.json  prospect_theory_schema.json  rational_choice_theory_schema.json  self_categorization_theory_schema.json  test_elm_theory.json  theory_meta_schema_v10.json  theory_meta_schema_v11.json  theory_meta_schema_v11_1.json  theory_meta_schema_v12.json  theory_meta_schema_v9.json  tool_contract_schema.yaml  uses_gratifications_theory_schema.json  young_cognitive_mapping_schema.json  young_cognitive_mapping_v11_1.json
(+3889 files in other folders)
